tests/expectations/compiler/function/duplicate_definition_fail.out
Error [EAST0372006]: function `main` shadowed by
    --> compiler-test:7:5
     |
   7 |     function main(y: bool) -> bool {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   8 |         return y;
     |         ^^^^^^^^^
   9 |     }
     |     ^
